--- a/Algorithm/1. 背包，队列和栈.md
+++ b/Algorithm/1. 背包，队列和栈.md
@@ -2,7 +2,29 @@
 
 Tags: Algorithm
 
-[TOC]
+<!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
+
+[1. 背包，队列和栈](#1-背包，队列和栈)
+&emsp;[1.1 特点](#11-特点)
+&emsp;&emsp;[1.1.1 背包](#111-背包)
+&emsp;&emsp;[1.1.2 队列(先进先出)](#112-队列先进先出)
+&emsp;&emsp;[1.1.3 栈](#113-栈)
+&emsp;&emsp;&emsp;[例子：算数表达式的表示法](#例子：算数表达式的表示法)
+&emsp;[1.2 实现](#12-实现)
+&emsp;&emsp;[1.2.0 使用数组实现栈](#120-使用数组实现栈)
+&emsp;&emsp;[1.2.1 链表](#121-链表)
+&emsp;&emsp;&emsp;[1.2.1.1 创建](#1211-创建)
+&emsp;&emsp;&emsp;[1.2.1.2 在头部插入](#1212-在头部插入)
+&emsp;&emsp;&emsp;[1.2.1.3 从头部删除](#1213-从头部删除)
+&emsp;&emsp;&emsp;[1.2.1.4 在尾部插入](#1214-在尾部插入)
+&emsp;&emsp;&emsp;[1.2.1.5 在其他地方插入和删除](#1215-在其他地方插入和删除)
+&emsp;&emsp;&emsp;[1.2.1.6 遍历](#1216-遍历)
+&emsp;&emsp;[1.2.2 链表的使用](#122-链表的使用)
+&emsp;&emsp;&emsp;[1.2.2.1 实现栈](#1221-实现栈)
+&emsp;&emsp;&emsp;[1.2.2.2 实现队列](#1222-实现队列)
+&emsp;&emsp;&emsp;[1.2.2.3 背包的实现](#1223-背包的实现)
+
+<!-- /MDTOC -->
 
 ---
 
@@ -14,22 +36,22 @@ They are all the **Set** of Data Objects
 
 ### 1.1.1 背包
 
-- **不支持** 删除元素
-- 使用其来收集元素，遍历和递归它们
-- 元素的顺序是不确定的
+-   **不支持** 删除元素
+-   使用其来收集元素，遍历和递归它们
+-   元素的顺序是不确定的
 
 
 ### 1.1.2 队列(先进先出)
 
 这里所说的队列指的是先进先出的队列。
 
-- 数据元素相对此集合的顺序是**先进先出**
-- 队列能收集数据，同时保持它们的相对顺序
+-   数据元素相对此集合的顺序是**先进先出**
+-   队列能收集数据，同时保持它们的相对顺序
 
 ### 1.1.3 栈
 
-- 正好与队列相反，数据元素在栈中是后进先出的。
-- 栈也会保持数据元素的相对顺序
+-   正好与队列相反，数据元素在栈中是后进先出的。
+-   栈也会保持数据元素的相对顺序
 
 
 #### 例子：算数表达式的表示法
@@ -38,26 +60,26 @@ They are all the **Set** of Data Objects
 
 当接收到一个算数表达式的时候：
 
-1. 将数值压入**数值栈**
-2. 将操作符压入**操作符栈**
-3. 忽略**左括号**
-4. 当遇到**右括号**的时候，弹出**一个操作符**，和**所需要的数值**，并且将计算结果压入数值栈
+1.  将数值压入**数值栈**
+2.  将操作符压入**操作符栈**
+3.  忽略**左括号**
+4.  当遇到**右括号**的时候，弹出**一个操作符**，和**所需要的数值**，并且将计算结果压入数值栈
 
 ## 1.2 实现
 
 ### 1.2.0 使用数组实现栈
 
-- `push()` 方法需要检查当前栈是否是满的，如果满，则进行扩容
-- `resize()` 方法会将当前数组的空间加倍（或减半）
-- `pop()` 方法需要检查当前栈的大小是否**小于数组的 1/4**[^footnote]，如果成立，则将数组的空间减少为它的一半。
-- 需要防止**对象游离**[^footnote2]，当数据对象被弹出后，将其声明为 `null`
-- 缺点
-	- 时间复杂度与**数组的大小**相关
-	- 所需要的空间是不可预知的
+-   `push()` 方法需要检查当前栈是否是满的，如果满，则进行扩容
+-   `resize()` 方法会将当前数组的空间加倍（或减半）
+-   `pop()` 方法需要检查当前栈的大小是否**小于数组的 1/4**，如果成立，则将数组的空间减少为它的一半。
+-   需要防止**对象游离**，当数据对象被弹出后，将其声明为 `null`
+-   缺点
+    -   时间复杂度与**数组的大小**相关
+	-   所需要的空间是不可预知的
 
-[^footnote]: 如果当前栈的大小小于数组的 1/4，那么即使 `pop()` 方法使其减少了，它仍然比当前栈的大小还要**大一倍**，所以我们依旧有空间储存数据，为了防止空间的浪费，将数组的空间减少。
-
-[^footnote2]: 当一个数据对象被弹出栈后，它就**再也不会被栈使用了**，但是数据的引用依旧存在，所以 Java 不会将这块内存回收。这种情况就被叫做**对象游离**
+> 如果当前栈的大小小于数组的 1/4，那么即使 `pop()` 方法使其减少了，它仍然比当前栈的大小还要**大一倍**，所以我们依旧有空间储存数据，为了防止空间的浪费，将数组的空间减少。
+>
+> 当一个数据对象被弹出栈后，它就**再也不会被栈使用了**，但是数据的引用依旧存在，所以 Java 不会将这块内存回收。这种情况就被叫做**对象游离**
 
 
 ### 1.2.1 链表
@@ -75,7 +97,7 @@ private class Node
 }
 ```
 
-> - 只要声明一个 `Node` 变量，我们就能表示一个链表
+> -   只要声明一个 `Node` 变量，我们就能表示一个链表
 > 因为 `Node` 被用作内部类，所以我们能直接地声明其成员。
 
 ```java
@@ -138,26 +160,26 @@ for(Node x = first; x != null; x = x.next) {
 
 使用链表可以：
 
-- 处理任何数据
-- 需求的空间仅仅和集合的大小成正比
-- 时间复杂度和集合的大小**无关**[^footnote3]
+-   处理任何数据
+-   需求的空间仅仅和集合的大小成正比
+-   时间复杂度和集合的大小**无关**
 
-[^footnote3]:  链表的插入和删除操作仅仅是变量的**赋值**，以及**对象的构建**，它们的时间复杂度都是**常数级别** 的
+> 链表的插入和删除操作仅仅是变量的**赋值**，以及**对象的构建**，它们的时间复杂度都是**常数级别** 的
 
 #### 1.2.2.1 实现栈
 
 将链表的头部设定为栈顶
-- 当压入数据的时候，我们**在头部**插入数据元素
-- 当弹出数据的时候，我们**在头部**删除数据元素
+-   当压入数据的时候，我们**在头部**插入数据元素
+-   当弹出数据的时候，我们**在头部**删除数据元素
 
 > 选择链表头部而不是尾部进行操作的原因：链表的插入和删除操作都是在一端进行的；
 > 链表的尾部元素一般不好获取，特别是对于单链表而言，如果采用尾部作为栈顶，那么当删除栈顶元素之后，我们无法很快的获取新的栈顶元素的引用（**因为要从头部进行遍历，或者维护两个指针，这都是不必要的**），而采用头部作为栈的顶部，仅仅需要一句声明语句 `newTop = top.next;` 即可获取到新的栈顶元素。
 
 #### 1.2.2.2 实现队列
 
-- 设定链表的头部为队列的头部，链表的尾部为队列的尾部。
-- 当插入元素时，在尾部插入数据。
-- 当删除元素时，在头部删除数据。
+-   设定链表的头部为队列的头部，链表的尾部为队列的尾部。
+-   当插入元素时，在尾部插入数据。
+-   当删除元素时，在头部删除数据。
 
 > 由于队列插入和删除的位置不同，在尾部删除元素很麻烦，但是相应的插入操作却变得十分简单，仅需要改变其 `next` 域即可，而不是类似删除操作还要返回前一个数据的引用。
 
