--- a/BigInovation/工作总结报告.md
+++ b/BigInovation/工作总结报告.md
@@ -6,4 +6,6 @@
 
 应用网络模块采用了目前 Android 上最为优秀的 Retrofit 2 作为网络加载库，通过完全 **RESTful** 的网络调用和后端服务器进行交互，与后端的 Django 框架完美契合。
 
-整个项目的工程代码使用了全球最大的代码托管网站 GitHub ，以**私有仓库**的方式将代码托管在其服务器上。采用 Git 作为代码版本管理工具，并采用 GitHub 上最流行的 Pull Request 工作流，对人员的远程工作
+整个项目的工程代码使用了全球最大的代码托管网站 GitHub ，以**私有仓库**的方式将代码托管在其服务器上。
+
+采用 Git 作为代码版本管理工具，并采用 GitHub 上最流行的 Pull Request 工作流，保证了成员即使采用远程工作模式，也可以无障碍的与组员沟通；同时，将主分支设置为保护分支，要求代码**经过审查后**方可合并，确保了代码的可用性，正确性和可维护性。
