--- a/C#/\.NET 平台基础知识.md
+++ b/C#/\.NET 平台基础知识.md
@@ -66,7 +66,9 @@ CLS 全称为 Common Language Specification。它定义了一个让所有的 .NE
 
 ## 4. 托管代码和非托管代码
 
-C# 语言只能在 .NET 运行库中执行。
+和 Java 一样，C# 语言需要生成类似 Java 字节码的一种中间代码才能够运行。
+
+所以 C# 编译生成的代码只能在 .NET 运行库中执行。
 
 > 就像 Java 必须使用 JRE 运行一样
 
@@ -75,3 +77,111 @@ C# 语言只能在 .NET 运行库中执行。
 包含托管代码的二进制单元称为**程序集**(assembly)。
 
 反之，不能直接在 .NET 运行库承载的代码被称为非托管代码(unmanaged code)
+
+## 5. 其他支持 .NET 的编程语言
+
+除了 C# 以外，.NET 框架也支持其他的编程语言。
+
+实际上，在安装了 Visual Studio 之后，微软会提供 C#, Visual Basic, C++/CLI , JavaScript 和 F# 的 .NET 支持
+
+## 6. .NET 程序集概览
+
+ 为了实现平台无关性，.NET 采用了程序集的概念。
+
+不同的语言通过特定的编译器，编译得到一个中间语言(IL)和元数据，随后打包成一个程序集。
+
+> 需要注意的是，.NET 中间语言拥有很多种缩写，IL 只是其中一种，其余的还有 MSIL 或者 CIL。
+>
+> IL, MSIL, CIL 都是等价的，指的就是中间语言。
+
+程序集是二进制大对象所打包成的集合，大致分为两类；
+
+一类是应用程序，拥有一个 `.exe` 入口。
+
+另一类是库，具有 `.dll` 扩展名。
+
+CIL 类似于 Java 的字节码，也是平台无关性的一个重要的原因。
+
+在运行时，CIL 通过 JIT 编译器编译成为特定的机器码，在不同的设备上进行运行。
+
+程序集除了包含 CIL 以外，还包含了元数据。元数据是许多 C# 特性的支柱（例如反射，晚期绑定等），同时，一些现代 IDE (Visual Studio)可以利用元数据进行智能感知。
+
+此外，程序集还包含了描述程序集本身的元数据，它们叫做**清单**(manifest)。
+
+## 7. CTS
+
+CTS 是 .NET 的公共类型系统，它包括五个内容：
+
+- 类
+- 接口
+- 结构
+- 枚举
+- 委托
+
+大体上与 Java 类似，下面重点讲讲和 Java 不同的部分。
+
+### 7.1 委托(delegate)
+
+这可以算是 C# 相对 Java 的一个进步的方面。委托相当于一个类型安全的**函数指针**，实际上委托是一个派生自 `System.MultcastDelegate` 的**类**，使用 `delegate` 关键字可以声明一个委托。
+
+```c#
+delegate int BinaryOp(int x, int y);
+```
+
+这样，就可以使用委托来实现回调，而不需要像 Java 一样使用臃肿的接口来进行回调动作。
+
+### 7.2 结构(struct)
+
+C# 的结构和 C99 之后的结构很像，用法也趋近；可以包含字段、构造函数、定义方法等。
+
+不过一般当做一个容器类来使用。
+
+## 8. 内建类型
+
+同样，.NET 具有一个內建的核心数据类型，用于兼容不同平台的类型结构。下表给出了一个 CTS 数据类型和 C# 、C++ 的相应对比。
+
+| CTS            | C#      | C++                          |
+| -------------- | ------- | :--------------------------- |
+| System.Byte    | byte    | unsigned char                |
+| System.SByte   | sbyte   | signed cahr                  |
+| System.Int16   | short   | short                        |
+| System.Int32   | int     | int 或 long                   |
+| System.Int64   | long    | int64_t                      |
+| System.UInt16  | ushort  | unsigned short               |
+| System.UInt32  | uint    | unsigned int 或 unsigned long |
+| System.UInt64  | ulong   | unsigned int64_t             |
+| System.Single  | float   | float                        |
+| System.Double  | double  | double                       |
+| System.Object  | object  | object^                      |
+| System.Char    | char    | wchar_t                      |
+| System.String  | string  | String^                      |
+| System.Decimal | decimal | Decimal                      |
+| System.Boolean | bool    | bool                         |
+
+## 9. CLR
+
+CLR 类似于 JVM，利用 `mscoree.dll` 库来进行 .NET 程序加载工作。
+
+下图是 `mscoree.dll` 的工作流。
+
+![](http://www.ituring.com.cn/download/01YY7g3jBdEN)
+
+## 10. 名称空间(namespace)
+
+这个特性类似于 Java 的 `package` 。
+
+语法和 C++ 中的名称空间语法相同，使用 `using` 来引入名称空间（相当于 Java 的 `import`） 来进行使用。
+
+```c#
+using System;
+
+public class MyApp
+{
+  static void Main()
+  {
+    Console.WriteLine("Hi from C#");
+  }
+}
+```
+
+当然，同 Java 一样，在使用对应的名称空间之前，首先要引入依赖程序集。
