Add "code should be understandable"

--- a/CleanCode/《编写可读代码的艺术》笔记.md
+++ b/CleanCode/《编写可读代码的艺术》笔记.md
@@ -2,3 +2,14 @@
 
 [TOC]
 
+## 1. 代码应该易于理解
+
+好的代码，应该能让人易于理解。
+
+理解难度指的是别人**读懂**你的代码所需的时间。
+
+> 读懂指的是，能对代码进行修改和扩展，并保持原有功能不变。
+
+易于理解的代码也易于测试，集成，模块化和扩展。
+
+从提高编码能力来看：**程序员应该以写出易于理解的代码为核心目标。**
