--- a/C#/\.NET 平台基础知识.md
+++ b/C#/\.NET 平台基础知识.md
@@ -2,24 +2,24 @@
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[.NET 平台基础知识](#net-平台基础知识)   
-&emsp;[1 . 概述](#1-概述)   
-&emsp;[2. .NET 平台的构成](#2-net-平台的构成)   
-&emsp;&emsp;[2.1 平台构造块](#21-平台构造块)   
-&emsp;&emsp;&emsp;[2.1.1 CLR —— 公共语言运行库](#211-clr-——-公共语言运行库)   
-&emsp;&emsp;&emsp;[2.1.2 CTS —— 公共类型系统](#212-cts-——-公共类型系统)   
-&emsp;&emsp;&emsp;[2.1.3 CLS —— 公共语言规范](#213-cls-——-公共语言规范)   
-&emsp;&emsp;[2.2 基础类库](#22-基础类库)   
-&emsp;[3. C# 的特点](#3-c#-的特点)   
-&emsp;[4. 托管代码和非托管代码](#4-托管代码和非托管代码)   
-&emsp;[5. 其他支持 .NET 的编程语言](#5-其他支持-net-的编程语言)   
-&emsp;[6. .NET 程序集概览](#6-net-程序集概览)   
-&emsp;[7. CTS](#7-cts)   
-&emsp;&emsp;[7.1 委托(delegate)](#71-委托delegate)   
-&emsp;&emsp;[7.2 结构(struct)](#72-结构struct)   
-&emsp;[8. 内建类型](#8-内建类型)   
-&emsp;[9. CLR](#9-clr)   
-&emsp;[10. 名称空间(namespace)](#10-名称空间namespace)   
+[.NET 平台基础知识](#net-平台基础知识)
+&emsp;[1 . 概述](#1-概述)
+&emsp;[2. .NET 平台的构成](#2-net-平台的构成)
+&emsp;&emsp;[2.1 平台构造块](#21-平台构造块)
+&emsp;&emsp;&emsp;[2.1.1 CLR —— 公共语言运行库](#211-clr-——-公共语言运行库)
+&emsp;&emsp;&emsp;[2.1.2 CTS —— 公共类型系统](#212-cts-——-公共类型系统)
+&emsp;&emsp;&emsp;[2.1.3 CLS —— 公共语言规范](#213-cls-——-公共语言规范)
+&emsp;&emsp;[2.2 基础类库](#22-基础类库)
+&emsp;[3. C# 的特点](#3-c#-的特点)
+&emsp;[4. 托管代码和非托管代码](#4-托管代码和非托管代码)
+&emsp;[5. 其他支持 .NET 的编程语言](#5-其他支持-net-的编程语言)
+&emsp;[6. .NET 程序集概览](#6-net-程序集概览)
+&emsp;[7. CTS](#7-cts)
+&emsp;&emsp;[7.1 委托(delegate)](#71-委托delegate)
+&emsp;&emsp;[7.2 结构(struct)](#72-结构struct)
+&emsp;[8. 内建类型](#8-内建类型)
+&emsp;[9. CLR](#9-clr)
+&emsp;[10. 名称空间(namespace)](#10-名称空间namespace)
 
 <!-- /MDTOC -->
 
@@ -145,7 +145,7 @@ CTS 是 .NET 的公共类型系统，它包括五个内容：
 
 这可以算是 C# 相对 Java 的一个进步的方面。委托相当于一个类型安全的**函数指针**，实际上委托是一个派生自 `System.MultcastDelegate` 的**类**，使用 `delegate` 关键字可以声明一个委托。
 
-```c#
+```csharp
 delegate int BinaryOp(int x, int y);
 ```
 
@@ -193,7 +193,7 @@ CLR 类似于 JVM，利用 `mscoree.dll` 库来进行 .NET 程序加载工作。
 
 语法和 C++ 中的名称空间语法相同，使用 `using` 来引入名称空间（相当于 Java 的 `import`） 来进行使用。
 
-```c#
+```csharp
 using System;
 
 public class MyApp
