Add data-link layer notes

--- a/ComputerNetwork/计算机网络考试速记.md
+++ b/ComputerNetwork/计算机网络考试速记.md
@@ -1,13 +1,19 @@
 # 计算机网络考试速记
-
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
 [计算机网络考试速记](#计算机网络考试速记)   
 &emsp;[1. OSI 参考模型](#1-osi-参考模型)   
 &emsp;[2. TCP/IP 参考模型](#2-tcpip-参考模型)   
+&emsp;[3. 信息传输介质](#3-信息传输介质)   
+&emsp;[4. 多路复用](#4-多路复用)   
+&emsp;[5. 数据链路层](#5-数据链路层)   
+&emsp;&emsp;[5.1 分帧](#51-分帧)   
+&emsp;&emsp;[5.2 差错检测和修正](#52-差错检测和修正)   
+&emsp;&emsp;&emsp;[5.2.1 纠错码——不可靠信道(WIFI)](#521-纠错码——不可靠信道wifi)   
+&emsp;&emsp;&emsp;[5.2.2 检错码——可靠信道(光纤)](#522-检错码——可靠信道光纤)   
+&emsp;&emsp;&emsp;[5.3 回退 N 步与选择重传](#53-回退-n-步与选择重传)   
 
 <!-- /MDTOC -->
-
 ## 1. OSI 参考模型
 
 从低到高：
@@ -52,8 +58,9 @@
 
 与 OSI 的对比
 
- OSI  |  TCP/IP
------|-----
+
+OSI  |  TCP/IP
+-----|-----|
  应用层 |  应用层
  表示层 |  &nbsp;
  会话层 |  &nbsp;
@@ -63,4 +70,121 @@
  物理层 | &nbsp;
 
 OSI 先有层级，后有协议；
+
 TCP/IP 先有协议，后有层级
+
+## 3. 信息传输介质
+
+1. 磁介质
+
+    > 低成本，短途运输速率高，延迟高
+2. 双绞线
+
+    > 即常用的网线。低噪声，低延迟，拥有足够的带宽，是目前应用最为广泛的信息传输介质
+3. 同轴电缆
+
+    > 带宽比双绞线大，抗噪性较好，主要用于 **长距离信息运输**
+4. 电力线
+
+    > 布置方便；但电源信号专用，频率不符，目前应用低
+5. 光纤
+
+    > 超高带宽，主要用于长距离通信
+    > 光纤相对于铜线，具有高带宽，低衰减，重量轻，部署难，接口费用高 的特点
+
+## 4. 多路复用
+
+1. 频分复用
+
+    > 将频谱分为几个频段，每个用户 **完全拥有** 其中一个频段进行通信。
+    > OFDM 已经广泛应用于 802.11、有线电视网络和电力线网络
+2. 时分复用
+
+    > 用户以循环的方式轮流工作，周期性地获得 **整个带宽** 非常短的一个时间
+    > TDM 广泛用于电话网络和蜂窝网络中
+3. 码分复用
+
+    > 通过码片来提取叠加信号中的信息。
+    > 通过不同的码片序列来提取对应的信息，并将其他的信息都当做噪声
+    > CDMA 被用于卫星通信和蜂窝网络以及有线电视网络
+
+## 5. 数据链路层
+
+数据链路层操作的对象是数据帧，向网络层提供服务，进行差错控制和流量控制。
+
+### 5.1 分帧
+
+1. 字节长度
+
+    > 通过计算字节长度来分帧
+    > 不准确，很少使用
+2. 填充字节标志
+
+    > 帧变长
+    > 某些情况会干扰帧分界
+3. 填充比特
+
+    > 确保最小转换密度，有助于物理层保持同步
+    > USB 使用该技术
+4. 物理层编码违禁法
+
+    > 通过使用一些物理层的违法编码或者冗余字节来进行分帧
+    > 不需要填充数据
+
+802.11 和以太网综合使用了上述方法（不包括字节长度）
+
+### 5.2 差错检测和修正
+
+#### 5.2.1 纠错码——不可靠信道(WIFI)
+
+1. 海明码
+
+    > 纠错存储器
+    > 检测 $d$ 个错误，需要距离为 $d + 1$ 的编码方案
+2. 卷积码
+
+    > GSM 使用
+3. 里德罗门码
+
+    > 纠错能力强，处理突发错误能力强
+    > 应用于光盘，卫星通信
+4. 低密度奇偶校验
+
+    > 纠错性能最佳
+    > 使用于 802.11，数字广播，万兆以太
+
+#### 5.2.2 检错码——可靠信道(光纤)
+
+1. 奇偶校验
+
+    > 只能检查一处错误
+2. 校验和
+
+    > 16 位字节和，可以检验奇偶校验检查不出的错误
+3. 循环冗余检验
+
+    > 多项式检验
+    > 最可靠，使用最广泛
+    > 使用于局域网和点到点连接
+
+#### 5.3 回退 N 步与选择重传
+
+1. 停等协议
+
+    > 直到接收到确认后才发下一帧
+2. 回退 N 步
+
+    > 不需要等到回报才发下一帧；而是直接发 $w$ 帧；
+    > 如果 $w$ 个帧都没有回报，则堵塞。
+    >
+    > 出错时，直接丢弃，发送方回退，重新发送错误之后的帧。
+    > 错误多时，影响带宽
+3. 选择重传
+
+    > 相比回退 N 步，不是由发送方回退 N 个窗口后重发；
+    > 而是由接收方缓存接下来的帧，直到错误帧重发后，进行合并。
+4. 两者的流量控制
+
+    > 通过滑动窗口来进行流量控制。
+    > 只有接收方的窗口滑动时（回报），发送方的窗口才能滑动
+    > 回报没有拿到，则发送方的窗口阻塞，如果超时，则尝试重发
