Fix wrong space and TOC

--- a/Japanese/动词变化形式.md
+++ b/Japanese/动词变化形式.md
@@ -10,16 +10,16 @@
 &emsp;&emsp;[2.3 构成复合词](#23-构成复合词)   
 &emsp;[3. 否定形](#3-否定形)   
 &emsp;[4. 意志形(想要做)](#4-意志形想要做)   
-&emsp;[5. た　形/て　形](#5-た　形て　形)   
+&emsp;[5. た 形/て 形](#5-た-形て-形)   
 &emsp;&emsp;[5.1 音变规律](#51-音变规律)   
 &emsp;&emsp;[5.2 作用](#52-作用)   
 &emsp;[6. 假定形(如果)](#6-假定形如果)   
 &emsp;&emsp;[6.1 假定形表达方式](#61-假定形表达方式)   
-&emsp;&emsp;&emsp;[6.1.1 と　形式](#611-と　形式)   
-&emsp;&emsp;&emsp;[6.1.2 ば　形式](#612-ば　形式)   
-&emsp;&emsp;&emsp;[6.1.3 なら　形式](#613-なら　形式)   
-&emsp;&emsp;&emsp;[6.1.4 たら　形式](#614-たら　形式)   
-&emsp;&emsp;&emsp;[6.1.5　なら　和 たら　的区别](#615　なら　和-たら　的区别)   
+&emsp;&emsp;&emsp;[6.1.1 と 形式](#611-と-形式)   
+&emsp;&emsp;&emsp;[6.1.2 ば 形式](#612-ば-形式)   
+&emsp;&emsp;&emsp;[6.1.3 なら 形式](#613-なら-形式)   
+&emsp;&emsp;&emsp;[6.1.4 たら 形式](#614-たら-形式)   
+&emsp;&emsp;&emsp;[6.1.5 なら 和 たら 的区别](#615-なら-和-たら-的区别)   
 &emsp;[7. 命令形](#7-命令形)   
 &emsp;&emsp;[7.1 命令的表达方式](#71-命令的表达方式)   
 
@@ -31,7 +31,7 @@
 
 ## 2. 连用形
 
-实际上就是 ます　形去掉 ます，就是动词连用形。
+实际上就是 ます 形去掉 ます，就是动词连用形。
 
 ### 2.1 敬体
 
@@ -49,9 +49,9 @@
 
 ![](http://ww4.sinaimg.cn/large/006tNc79gw1fadp1msrawj31kw0wcado.jpg)
 
-通常和 に　连用，表示目的。
+通常和 に 连用，表示目的。
 
-> に　作为助词只能接名词，表示目的时，只能使用动词的名词形式，即连用形。
+> に 作为助词只能接名词，表示目的时，只能使用动词的名词形式，即连用形。
 
 ### 2.3 构成复合词
 
@@ -75,7 +75,7 @@
 
 需要注意的是，推量形不能用于第二人称，而意志形不能用于第三人称。
 
-## 5. た　形/て　形
+## 5. た 形/て 形
 
 ![](http://ww2.sinaimg.cn/large/006tNc79gw1fae0smbu83j31kw0wmwiz.jpg)
 
@@ -89,21 +89,21 @@
 
 ![](http://ww4.sinaimg.cn/large/65e4f1e6jw1fae2euignej21kw0wg0y6.jpg)
 
-た　形表示 **完成时和过去式**
+た 形表示 **完成时和过去式**
 
-て　形表示 **中顿**，如果有两个动词需要隔开来说，那么使用 て　形
+て 形表示 **中顿**，如果有两个动词需要隔开来说，那么使用 て 形
 
 ## 6. 假定形(如果)
 
 ![](http://ww3.sinaimg.cn/large/65e4f1e6gw1fae2lsbgg6j21kw0wfjwj.jpg)
 
-直接使用 **尾变 え　段 + ば** 即可，不需要区分。
+直接使用 **尾变 え 段 + ば** 即可，不需要区分。
 
 ### 6.1 假定形表达方式
 
 假定形表达方式有四种： と、ば、なら、たら
 
-#### 6.1.1 と　形式
+#### 6.1.1 と 形式
 
 前面的动作发生之后，就 **一定会** (100%) 发生后面的动作；
 
@@ -113,7 +113,7 @@
 
 > コインを入 い れると、缶 (かん) ビールが出 で る
 
-#### 6.1.2 ば　形式
+#### 6.1.2 ば 形式
 
 主要是固定搭配、谚语和接特定的动词，基本属于固定搭配。
 
@@ -146,17 +146,17 @@
 
 固定搭配，主要有
 
-1. 〜　ば　〜　ほど　
+1. 〜 ば 〜 ほど
 
     > 越... 就越 ...
 
-2. 否定形去 い　＋　ければならない
+2. 否定形去 い ＋ ければならない
 
     > 不...的话，就不行。
 
 剩下的都表示 **必然结果**
 
-#### 6.1.3 なら　形式
+#### 6.1.3 なら 形式
 
 假设前面的动作 **尚未进行**，而给予后面的建议和意见、后果。
 
@@ -169,29 +169,29 @@
 > スーパーに行 い くなら、メロンを買 か ってきてください
 
 
-#### 6.1.4 たら　形式
+#### 6.1.4 たら 形式
 
-动词 た　形 + なら　的省略。
+动词 た 形 + なら 的省略。
 
 表示 **如果事情已经发生了，而对后方的效果、后果。**
 
 > (已经发生了) 的话...就...
 
-用法： **动词 た　形 + ら**
+用法： **动词 た 形 + ら**
 
 > 学 がっ 校 こう に行 い ったら、先 せん 生 せい に休 やす みのことを伝 つた えてください
 > **到了学校之后**，和老师说休假的事情。
 
-#### 6.1.5　なら　和 たら　的区别
+#### 6.1.5 なら 和 たら 的区别
 
-- なら　
+- なら
     > 表示前面的动作 **尚未进行**，多用于表示建议
 - たら
     > 表示前面的动作 **已经进行**
 
 但是在接形容词和名词，区别不大。
 
-还有就是 なら　比较正式化，而　たら　比较口语化；
+还有就是 なら 比较正式化，而 たら 比较口语化；
 
 需要注意的就是它们在接动词的区别。
 
@@ -201,7 +201,7 @@
 
 ![](http://ww3.sinaimg.cn/large/65e4f1e6gw1fae2paq48cj21kw0wdq78.jpg)
 
-一段动词中的 よ　是一个 **书面用语**，口语中一般不用。
+一段动词中的 よ 是一个 **书面用语**，口语中一般不用。
 
 ### 7.1 命令的表达方式
 
