--- a/CleanCode/《编写可读代码的艺术》笔记.md
+++ b/CleanCode/《编写可读代码的艺术》笔记.md
@@ -2,16 +2,16 @@
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[《编写可读代码的艺术》笔记](#《编写可读代码的艺术》笔记)   
-&emsp;[1. 代码应该易于理解](#1-代码应该易于理解)   
-&emsp;[2. 把信息装到名字中](#2-把信息装到名字中)   
-&emsp;&emsp;[2.1 选择专业的词, 不要空洞](#21-选择专业的词-不要空洞)   
-&emsp;&emsp;[2.2 避免使用泛泛的名字](#22-避免使用泛泛的名字)   
-&emsp;&emsp;[2.3 使用具体的名字代替抽象的名字](#23-使用具体的名字代替抽象的名字)   
-&emsp;&emsp;&emsp;[例子： `run_locally`](#例子：-run_locally)   
-&emsp;&emsp;[2.4 为名字附带更多信息](#24-为名字附带更多信息)   
-&emsp;&emsp;[2.5 名字的长度](#25-名字的长度)   
-&emsp;&emsp;[2.6 利用名字的格式来传递含义](#26-利用名字的格式来传递含义)   
+[《编写可读代码的艺术》笔记](#《编写可读代码的艺术》笔记)
+&emsp;[1. 代码应该易于理解](#1-代码应该易于理解)
+&emsp;[2. 把信息装到名字中](#2-把信息装到名字中)
+&emsp;&emsp;[2.1 选择专业的词, 不要空洞](#21-选择专业的词-不要空洞)
+&emsp;&emsp;[2.2 避免使用泛泛的名字](#22-避免使用泛泛的名字)
+&emsp;&emsp;[2.3 使用具体的名字代替抽象的名字](#23-使用具体的名字代替抽象的名字)
+&emsp;&emsp;&emsp;[例子： `run_locally`](#例子：-run_locally)
+&emsp;&emsp;[2.4 为名字附带更多信息](#24-为名字附带更多信息)
+&emsp;&emsp;[2.5 名字的长度](#25-名字的长度)
+&emsp;&emsp;[2.6 利用名字的格式来传递含义](#26-利用名字的格式来传递含义)
 
 <!-- /MDTOC -->
 
@@ -68,7 +68,7 @@ make  |  create, set up, build, generate, compose, add, new
 
 为你的名字带上一些具体的信息，比如说变量的 **内在格式**，和变量的 **单位**
 
-```c#
+```csharp
 string id;  // Example: "af84ef845cd8"
 ```
 
