--- a/Algorithm/算法分析.md
+++ b/Algorithm/算法分析.md
@@ -1,4 +1,4 @@
-# 2. 算法分析
+# 算法分析
 
 Tags: Algorithm
 
@@ -6,39 +6,39 @@ Tags: Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[2. 算法分析](#2-算法分析)  
-&emsp;[2.1 观察](#21-观察)  
-&emsp;[2.2 数学模型](#22-数学模型)  
-&emsp;&emsp;[2.2.1 时间](#221-时间)  
-&emsp;&emsp;&emsp;[2.2.1.1 估计](#2211-估计)  
-&emsp;&emsp;&emsp;[2.2.1.2 内循环](#2212-内循环)  
-&emsp;&emsp;&emsp;[2.2.1.3 成本模型](#2213-成本模型)  
-&emsp;&emsp;&emsp;[2.2.1.4 确定成本模型的步骤](#2214-确定成本模型的步骤)  
-&emsp;&emsp;&emsp;[2.2.1.5 增长级别的分类](#2215-增长级别的分类)  
-&emsp;&emsp;&emsp;[2.2.1.6 设计更快的算法](#2216-设计更快的算法)  
-&emsp;&emsp;&emsp;[2.1.1.7 根据增长数量级做出的预测](#2117-根据增长数量级做出的预测)  
-&emsp;&emsp;&emsp;[2.1.1.8 注意事项](#2118-注意事项)  
-&emsp;&emsp;[2.2.2 内存](#222-内存)  
-&emsp;&emsp;&emsp;[2.2.2.1 对象](#2221-对象)  
-&emsp;&emsp;&emsp;[2.2.2.2 链表](#2222-链表)  
-&emsp;&emsp;&emsp;[2.2.2.3 数组](#2223-数组)  
-&emsp;&emsp;&emsp;[2.2.2.4 String](#2224-string)  
-&emsp;[2.3 展望](#23-展望)  
+[算法分析](#算法分析)   
+&emsp;[1. 观察](#1-观察)   
+&emsp;[2. 数学模型](#2-数学模型)   
+&emsp;&emsp;[2.1 时间](#21-时间)   
+&emsp;&emsp;&emsp;[2.1.1 估计](#211-估计)   
+&emsp;&emsp;&emsp;[2.1.2 内循环](#212-内循环)   
+&emsp;&emsp;&emsp;[2.1.3 成本模型](#213-成本模型)   
+&emsp;&emsp;&emsp;[2.1.4 确定成本模型的步骤](#214-确定成本模型的步骤)   
+&emsp;&emsp;&emsp;[2.1.5 增长级别的分类](#215-增长级别的分类)   
+&emsp;&emsp;&emsp;[2.1.6 设计更快的算法](#216-设计更快的算法)   
+&emsp;&emsp;&emsp;[1.1.7 根据增长数量级做出的预测](#117-根据增长数量级做出的预测)   
+&emsp;&emsp;&emsp;[1.1.8 注意事项](#118-注意事项)   
+&emsp;&emsp;[2.2 内存](#22-内存)   
+&emsp;&emsp;&emsp;[2.2.1 对象](#221-对象)   
+&emsp;&emsp;&emsp;[2.2.2 链表](#222-链表)   
+&emsp;&emsp;&emsp;[2.2.3 数组](#223-数组)   
+&emsp;&emsp;&emsp;[2.2.4 String](#224-string)   
+&emsp;[3. 展望](#3-展望)   
 
 <!-- /MDTOC -->
 
 ---
 
 
-## 2.1 观察
+## 1. 观察
 
 - 运行程序，然后使用时间计算器来计算时间的使用。
 - 使用大数据来猜测和验证数学模型
 
 
-## 2.2 数学模型
+## 2. 数学模型
 
-### 2.2.1 时间
+### 2.1 时间
 
 时间使用的多少一般和以下因素有关：
 
@@ -46,29 +46,29 @@ Tags: Algorithm
 - 每个操作使用的频率
 
 
-#### 2.2.1.1 估计
+#### 2.1.1 估计
 
 我们使用 $\sim f(N)$ 来代表，当 $N$ 增长时，所用时间的结果和 $f(N)$ 的比值为 $1$，使用 $g(N) \sim f(N)$ 来代表当 $N$ 增长时，结果和 $g(N)/f(N)$ 的比值为 $1$
 
-#### 2.2.1.2 内循环
+#### 2.1.2 内循环
 
 - 内循环指的是程序执行时，**最频繁的操作**
 - 程序的时间复杂度一般都取决于内循环
 
 
-#### 2.2.1.3 成本模型
+#### 2.1.3 成本模型
 
 成本模型指的是基本的算法操作
 例如 3-Sum 问题，其成本模型是数组访问的次数
 
-#### 2.2.1.4 确定成本模型的步骤
+#### 2.1.4 确定成本模型的步骤
 
 1. 确定输入模型和问题规模
 2. 确定内循环
 3. 根据内循环来确定成本模型
 4. 根据输入模型，来确定操作的频率和次数
 
-#### 2.2.1.5 增长级别的分类
+#### 2.1.5 增长级别的分类
 
 ![Classification](http://algs4.cs.princeton.edu/14analysis/images/classifications.png)
 
@@ -101,7 +101,7 @@ Tags: Algorithm
 
 	> 非常慢，尽量避免去使用这种级别的算法
 
-#### 2.2.1.6 设计更快的算法
+#### 2.1.6 设计更快的算法
 
 使用分治策略
 
@@ -125,7 +125,7 @@ Tags: Algorithm
 
 	由此，通过分治策略和使用 **二分查找**，我们将 $N^3$ 级别的问题降低到了 $N^2logN$ 级别。
 
-#### 2.1.1.7 根据增长数量级做出的预测
+#### 1.1.7 根据增长数量级做出的预测
 
 | Describe   | Function | Modulus is 2  | Modulus is 10 | Handle the 10N | Handle 10N in 10 times faster|
 |--------|------|------|-------|-----|-----|
@@ -135,7 +135,7 @@ Tags: Algorithm
 | Cubic| $N^3$ | 8 | 1000 | a few months | couples of weeks|
 | Exponential| $2^N$ | $2^N$ | $2^{10N}$ | forever | forever
 
-#### 2.1.1.8 注意事项
+#### 1.1.8 注意事项
 
 1. 大常数
 
@@ -172,11 +172,11 @@ Tags: Algorithm
 
 
 
-### 2.2.2 内存
+### 2.2 内存
 
 在 Java 中，内存的使用一般会被填充为 **8的倍数**
 
-#### 2.2.2.1 对象
+#### 2.2.1 对象
 
 - Integer
     - 一共需要 24 byte
@@ -184,7 +184,7 @@ Tags: Algorithm
     - 4 bytes 的 `int` 值
     - 对象的引用，一般为 内存地址，使用 8 byte
 
-#### 2.2.2.2 链表
+#### 2.2.2 链表
 
 - Node(inner class)
     - 一共 40 byte
@@ -193,7 +193,7 @@ Tags: Algorithm
     - 当作为内部类时，需要一个额外的指向外围类的引用
     - 数据的开销
 
-#### 2.2.2.3 数组
+#### 2.2.3 数组
 
 > 在 Java 中，数组被实现为了对象
 
@@ -202,7 +202,7 @@ Tags: Algorithm
         -  16 bytes 对象开销
         -  4 bytes 填补开销
 
-#### 2.2.2.4 String
+#### 2.2.4 String
 
 - 40 bytes
 - Object cost, 16 bytes
@@ -218,7 +218,7 @@ $\Delta$ The subString
 
 > 所以，`subString()` 所需的内存是一个常量
 
-## 2.3 展望
+## 3. 展望
 
 - 不成熟的优化是万恶之源
 
