--- a/Algorithm/背包，队列和栈.md
+++ b/Algorithm/背包，队列和栈.md
@@ -1,28 +1,28 @@
-# 1. 背包，队列和栈
+# 背包，队列和栈
 
 Tags: Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[1. 背包，队列和栈](#1-背包，队列和栈)
-&emsp;[1.1 特点](#11-特点)
-&emsp;&emsp;[1.1.1 背包](#111-背包)
-&emsp;&emsp;[1.1.2 队列(先进先出)](#112-队列先进先出)
-&emsp;&emsp;[1.1.3 栈](#113-栈)
-&emsp;&emsp;&emsp;[例子：算数表达式的表示法](#例子：算数表达式的表示法)
-&emsp;[1.2 实现](#12-实现)
-&emsp;&emsp;[1.2.0 使用数组实现栈](#120-使用数组实现栈)
-&emsp;&emsp;[1.2.1 链表](#121-链表)
-&emsp;&emsp;&emsp;[1.2.1.1 创建](#1211-创建)
-&emsp;&emsp;&emsp;[1.2.1.2 在头部插入](#1212-在头部插入)
-&emsp;&emsp;&emsp;[1.2.1.3 从头部删除](#1213-从头部删除)
-&emsp;&emsp;&emsp;[1.2.1.4 在尾部插入](#1214-在尾部插入)
-&emsp;&emsp;&emsp;[1.2.1.5 在其他地方插入和删除](#1215-在其他地方插入和删除)
-&emsp;&emsp;&emsp;[1.2.1.6 遍历](#1216-遍历)
-&emsp;&emsp;[1.2.2 链表的使用](#122-链表的使用)
-&emsp;&emsp;&emsp;[1.2.2.1 实现栈](#1221-实现栈)
-&emsp;&emsp;&emsp;[1.2.2.2 实现队列](#1222-实现队列)
-&emsp;&emsp;&emsp;[1.2.2.3 背包的实现](#1223-背包的实现)
+[背包，队列和栈](#背包，队列和栈)   
+&emsp;[1. 特点](#1-特点)   
+&emsp;&emsp;[1.1 背包](#11-背包)   
+&emsp;&emsp;[1.2 队列(先进先出)](#12-队列先进先出)   
+&emsp;&emsp;[1.3 栈](#13-栈)   
+&emsp;&emsp;&emsp;[例子：算数表达式的表示法](#例子：算数表达式的表示法)   
+&emsp;[2. 实现](#2-实现)   
+&emsp;&emsp;[2.0 使用数组实现栈](#20-使用数组实现栈)   
+&emsp;&emsp;[2.1 链表](#21-链表)   
+&emsp;&emsp;&emsp;[2.1.1 创建](#211-创建)   
+&emsp;&emsp;&emsp;[2.1.2 在头部插入](#212-在头部插入)   
+&emsp;&emsp;&emsp;[2.1.3 从头部删除](#213-从头部删除)   
+&emsp;&emsp;&emsp;[2.1.4 在尾部插入](#214-在尾部插入)   
+&emsp;&emsp;&emsp;[2.1.5 在其他地方插入和删除](#215-在其他地方插入和删除)   
+&emsp;&emsp;&emsp;[2.1.6 遍历](#216-遍历)   
+&emsp;&emsp;[2.2 链表的使用](#22-链表的使用)   
+&emsp;&emsp;&emsp;[2.2.1 实现栈](#221-实现栈)   
+&emsp;&emsp;&emsp;[2.2.2 实现队列](#222-实现队列)   
+&emsp;&emsp;&emsp;[2.2.3 背包的实现](#223-背包的实现)   
 
 <!-- /MDTOC -->
 
@@ -32,23 +32,23 @@ Tags: Algorithm
 
 They are all the **Set** of Data Objects
 
-## 1.1 特点
+## 1. 特点
 
-### 1.1.1 背包
+### 1.1 背包
 
 -   **不支持** 删除元素
 -   使用其来收集元素，遍历和递归它们
 -   元素的顺序是不确定的
 
 
-### 1.1.2 队列(先进先出)
+### 1.2 队列(先进先出)
 
 这里所说的队列指的是先进先出的队列。
 
 -   数据元素相对此集合的顺序是**先进先出**
 -   队列能收集数据，同时保持它们的相对顺序
 
-### 1.1.3 栈
+### 1.3 栈
 
 -   正好与队列相反，数据元素在栈中是后进先出的。
 -   栈也会保持数据元素的相对顺序
@@ -65,9 +65,9 @@ They are all the **Set** of Data Objects
 3.  忽略**左括号**
 4.  当遇到**右括号**的时候，弹出**一个操作符**，和**所需要的数值**，并且将计算结果压入数值栈
 
-## 1.2 实现
+## 2. 实现
 
-### 1.2.0 使用数组实现栈
+### 2.0 使用数组实现栈
 
 -   `push()` 方法需要检查当前栈是否是满的，如果满，则进行扩容
 -   `resize()` 方法会将当前数组的空间加倍（或减半）
@@ -82,13 +82,13 @@ They are all the **Set** of Data Objects
 > 当一个数据对象被弹出栈后，它就**再也不会被栈使用了**，但是数据的引用依旧存在，所以 Java 不会将这块内存回收。这种情况就被叫做**对象游离**
 
 
-### 1.2.1 链表
+### 2.1 链表
 
 链表是一个递归的数据结果，它可以是空，或者是一个指向一个节点的引用；
 这个节点储存一个数据元素和一个指向**下一个节点或列表**的引用；
 `Node`（节点）类经常被用于内部类。
 
-#### 1.2.1.1 创建
+#### 2.1.1 创建
 ```java
 private class Node
 {
@@ -116,13 +116,13 @@ second.next = thrid;
 ```
 ![Build linked List](http://algs4.cs.princeton.edu/13stacks/images/linked-list.png)
 
-#### 1.2.1.2 在头部插入
+#### 2.1.2 在头部插入
 
 使用另一个引用（例如 `oldfirst`） 来储存头结点，然后建立新节点来储存数据，然后将 `next` 指向头结点
 
 ![Insert at beginning](http://algs4.cs.princeton.edu/13stacks/images/linked-list-insert-front.png)
 
-#### 1.2.1.3 从头部删除
+#### 2.1.3 从头部删除
 
 将头指针`first`直接指向 `first.next` 即可
 Java 的 garbage collector 会将内存回收。
@@ -130,7 +130,7 @@ Java 的 garbage collector 会将内存回收。
 
 ![Remove from the beginning](http://algs4.cs.princeton.edu/13stacks/images/linked-list-remove-first.png)
 
-#### 1.2.1.4 在尾部插入
+#### 2.1.4 在尾部插入
 
 就像在头部插入一样，用一个另外的引用 `oldlast` 来保存尾部节点，然后建立一个新的节点来储存数据，然后将 `oldlast.next` 声明为 `last`
 
@@ -138,11 +138,11 @@ Java 的 garbage collector 会将内存回收。
 
 ![Insert at the end](http://algs4.cs.princeton.edu/13stacks/images/linked-list-insert-end.png)
 
-#### 1.2.1.5 在其他地方插入和删除
+#### 2.1.5 在其他地方插入和删除
 
 进行这个操作，我们必须要拿到所需要插入位置的前一个节点的信息来辅助我们的插入删除操作，因此我们需要**遍历** 链表来取得指定插入位置的前一个位置。
 
-#### 1.2.1.6 遍历
+#### 2.1.6 遍历
 
 一般来说，我们使用 `foreach` 语句来进行遍历操作。
 
@@ -156,7 +156,7 @@ for(Node x = first; x != null; x = x.next) {
 }
 ```
 
-### 1.2.2 链表的使用
+### 2.2 链表的使用
 
 使用链表可以：
 
@@ -166,7 +166,7 @@ for(Node x = first; x != null; x = x.next) {
 
 > 链表的插入和删除操作仅仅是变量的**赋值**，以及**对象的构建**，它们的时间复杂度都是**常数级别** 的
 
-#### 1.2.2.1 实现栈
+#### 2.2.1 实现栈
 
 将链表的头部设定为栈顶
 -   当压入数据的时候，我们**在头部**插入数据元素
@@ -175,7 +175,7 @@ for(Node x = first; x != null; x = x.next) {
 > 选择链表头部而不是尾部进行操作的原因：链表的插入和删除操作都是在一端进行的；
 > 链表的尾部元素一般不好获取，特别是对于单链表而言，如果采用尾部作为栈顶，那么当删除栈顶元素之后，我们无法很快的获取新的栈顶元素的引用（**因为要从头部进行遍历，或者维护两个指针，这都是不必要的**），而采用头部作为栈的顶部，仅仅需要一句声明语句 `newTop = top.next;` 即可获取到新的栈顶元素。
 
-#### 1.2.2.2 实现队列
+#### 2.2.2 实现队列
 
 -   设定链表的头部为队列的头部，链表的尾部为队列的尾部。
 -   当插入元素时，在尾部插入数据。
@@ -183,6 +183,6 @@ for(Node x = first; x != null; x = x.next) {
 
 > 由于队列插入和删除的位置不同，在尾部删除元素很麻烦，但是相应的插入操作却变得十分简单，仅需要改变其 `next` 域即可，而不是类似删除操作还要返回前一个数据的引用。
 
-#### 1.2.2.3 背包的实现
+#### 2.2.3 背包的实现
 
 将栈或队列的 `pop()` 操作去掉，就是一个背包结构。
