Algorithm: Upgrade Elementory Sort to 2017

--- a/Algorithm/基本排序算法.md
+++ b/Algorithm/基本排序算法.md
@@ -1,4 +1,4 @@
-# 4. 基本排序算法
+# 基本排序算法
 
 Tags: Algorithm
 
@@ -6,18 +6,18 @@ Tags: Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[4. 基本排序算法](#4-基本排序算法)  
-&emsp;[4.1 选择排序](#41-选择排序)  
-&emsp;&emsp;[4.1.1 性能](#411-性能)  
-&emsp;[4.2 插入排序](#42-插入排序)  
-&emsp;&emsp;[4.2.1 实现](#421-实现)  
-&emsp;&emsp;[4.2.2 性能](#422-性能)  
-&emsp;&emsp;[4.2.3 优化](#423-优化)  
-&emsp;&emsp;&emsp;[4.2.3.1 使用移动代替交换](#4231-使用移动代替交换)  
-&emsp;&emsp;&emsp;[4.2.3.1 使用二分查找](#4231-使用二分查找)  
-&emsp;[4.3 希尔排序](#43-希尔排序)  
-&emsp;&emsp;[4.3.1 实现](#431-实现)  
-&emsp;&emsp;[4.3.2 性能](#432-性能)  
+[基本排序算法](#基本排序算法)   
+&emsp;[1. 选择排序](#1-选择排序)   
+&emsp;&emsp;[1.1 性能](#11-性能)   
+&emsp;[2. 插入排序](#2-插入排序)   
+&emsp;&emsp;[2.1 实现](#21-实现)   
+&emsp;&emsp;[2.2 性能](#22-性能)   
+&emsp;&emsp;[2.3 优化](#23-优化)   
+&emsp;&emsp;&emsp;[2.3.1 使用移动代替交换](#231-使用移动代替交换)   
+&emsp;&emsp;&emsp;[2.3.1 使用二分查找](#231-使用二分查找)   
+&emsp;[3. 希尔排序](#3-希尔排序)   
+&emsp;&emsp;[3.1 实现](#31-实现)   
+&emsp;&emsp;[3.2 性能](#32-性能)   
 
 <!-- /MDTOC -->
 
@@ -27,7 +27,7 @@ Tags: Algorithm
 一般为元素**比较**和**交换**的次数。
 如果**不需要比较和交换**，那么我们计算**数组访问**的次数
 
-## 4.1 选择排序
+## 1. 选择排序
 
 1. 找到**最小元素**
 2. 把它和**第一个元素**相交换
@@ -35,7 +35,7 @@ Tags: Algorithm
 4. 将其和**第二个元素**交换
 5. 重复以上步骤，直到数组排序完毕（元素指针走到数组末尾）
 
-### 4.1.1 性能
+### 1.1 性能
 
 在一个长度为 $N$ 的数组中，它需要 ${N^2}/{2}$ 次的**比较**和 $N$ 次的交换
 
@@ -44,7 +44,7 @@ Tags: Algorithm
 2. 数据的移动是最少的
 
 
-## 4.2 插入排序
+## 2. 插入排序
 
 插入排序的主要思想是在数组的无序部分取元素插入到有序部分中，从而逐步构建有序。
 
@@ -54,7 +54,7 @@ Tags: Algorithm
 2. 保证在 $a[i]$ 的左边，元素总是有序的
 3. 当 $i$ 指针到达数组末尾的时候，排序就完成了。
 
-### 4.2.1 实现
+### 2.1 实现
 
 ```java
 public static void sort(Comparable[] a) {
@@ -70,16 +70,16 @@ public static void sort(Comparable[] a) {
 }
 ```
 
-### 4.2.2 性能
+### 2.2 性能
 
 此算法的性能和输入有关。
 如果输入的序列已经是部分排序的，那么使用这个算法将会比较快；
 但是由于存在嵌套的 `for` 循环，在最坏情况下仍然需要 $N^2$ 次交换
 
 
-### 4.2.3 优化
+### 2.3 优化
 
-#### 4.2.3.1 使用移动代替交换
+#### 2.3.1 使用移动代替交换
 
 可以在上述算法实现上进行进一步调优。
 可以简单的将大的元素**往右移动**，从而空出一个正确的位置，将所需元素插入即可；
@@ -97,7 +97,7 @@ public static void sort(Comparable[] a) {
 a[j] = a[j - 1]
 ```
 
-#### 4.2.3.1 使用二分查找
+#### 2.3.1 使用二分查找
 
 由于是在有序部分寻找恰当位置插入，可以使用二分查找提高搜索效率
 
@@ -118,13 +118,13 @@ public int binaryIndex(int[] arr, int lo, int hi, int key) {
 ```
 
 
-## 4.3 希尔排序
+## 3. 希尔排序
 
 希尔排序是基于插入排序的一种排序算法。
 其基本思想是让元素在 $h$ 步长中有序
 如果 $h$ 很大，那么我们就可以将一个元素一次性移动很远
 
-### 4.3.1 实现
+### 3.1 实现
 
 ```java
 public class Shell {
@@ -149,12 +149,13 @@ public class Shell {
                     exch(a, j, j-h)
                 }
             }
+            h = h / 3;
         }
     }
 }
 ```
 
-### 4.3.2 性能
+### 3.2 性能
 
 希尔排序比插入排序和选择排序都要快；
 但是我们并不能给出一个准确的数学分析证明它的精确增长函数
