Fix style and file name

--- a/Algorithm/归并排序.md
+++ b/Algorithm/归并排序.md
@@ -283,13 +283,20 @@ public class  MergeBU {
 归并排序是**基于比较的排序算法**中**渐进最优**的
 
 
-> 归并排序**确保了** 即使在最坏情况，所需要的最少比较次数都是 $\sim NlogN$。
+归并排序**确保了** 即使在最坏情况，所需要的最少比较次数都是 $\sim NlogN$。
+
+
 由于没有一个基于比较的排序算法能**保证**所需要的最少次数都比 $log(N!)$ 要少，由于 $log(N!) \sim NlogN$，所以归并排序是**渐进最优**的**基于比较的**排序算法
 
-> 基于比较的排序可以由**决策树**来描述。
+基于比较的排序可以由**决策树**来描述。
+
 树的高度 $h$ 即为所需要进行的比较次数，由排列原理可知，$N$ 个元素有 $N!$ 中排序方式，一个决策树的叶子个数必须要能容纳下 $N!$ 中排序结果，**否则将无法完成排序**。
+
+
 因为如果不能容纳下所有的结果，一旦输入改变，那么得出的排序结果就可能是错误的。
+
 所以一棵比较算法的决策树，**至少**有 $N!$ 个叶节点，而高为 $h$ 的树具有最多叶节点个数为 $2^h$，则有：
+
 $$
 2^h \ge leaves \ge N! \\
 \Rightarrow \ h \ \ge \ lg(N!) \sim NlogN
