Update application of sorting algorithm to 2017

--- a/Algorithm/排序算法的应用.md
+++ b/Algorithm/排序算法的应用.md
@@ -1,4 +1,4 @@
-# 8. 排序算法的应用
+# 排序算法的应用
 
 Tags: Algorithm
 
@@ -6,17 +6,17 @@ Tags: Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[8. 排序算法的应用](#8-排序算法的应用)  
-&emsp;[8.1 多种排序方式](#81-多种排序方式)  
-&emsp;[8.2 稳定性](#82-稳定性)  
-&emsp;[8.3 排序算法的比较](#83-排序算法的比较)  
-&emsp;[8.3 结论](#83-结论)  
+[排序算法的应用](#排序算法的应用)   
+&emsp;[1. 多种排序方式](#1-多种排序方式)   
+&emsp;[2. 稳定性](#2-稳定性)   
+&emsp;[3. 排序算法的比较](#3-排序算法的比较)   
+&emsp;[4. 结论](#4-结论)   
 
 <!-- /MDTOC -->
 
 ---
 
-## 8.1 多种排序方式
+## 1. 多种排序方式
 
 使用 `Comparator` 接口，我们可以定义不同的 `sort()` 方法或者使用不同的键来对数据进行排序。
 
@@ -73,7 +73,7 @@ public class Student {
 }
 ```
 
-## 8.2 稳定性
+## 2. 稳定性
 
 稳定性指的是，在排序过程中，算法会保留**具有相同键值**的元素的相对顺序。
 
@@ -81,7 +81,7 @@ public class Student {
 
 排序算法稳定与否，在于**在排序过程中，是否改变了相同键值元素的位置**
 
-## 8.3 排序算法的比较
+## 3. 排序算法的比较
 
 <table>
 <tr>
@@ -161,7 +161,7 @@ public class Student {
 </table>
 
 
-## 8.3 结论
+## 4. 结论
 
 1. 快速排序是最快的排序算法
 
