--- a/Algorithm/2-3 树.md
+++ b/Algorithm/2-3 树.md
@@ -14,8 +14,8 @@ Tags: Algorithm
 &emsp;&emsp;[3.2 在只有 3-节点的树中插入](#32-在只有-3-节点的树中插入)   
 &emsp;&emsp;[3.3 在父节点为 2-节点 的 23-节点 插入](#33-在父节点为-2-节点-的-23-节点-插入)   
 &emsp;&emsp;[3.4 在父节点为 3-节点 的 3-节点 插入](#34-在父节点为-3-节点-的-3-节点-插入)   
-&emsp;[1.4 性能](#14-性能)   
-&emsp;[1.5 结论](#15-结论)   
+&emsp;[4. 性能](#4-性能)   
+&emsp;[5. 结论](#5-结论)   
 
 <!-- /MDTOC -->
 
@@ -71,7 +71,7 @@ Tags: Algorithm
 
 ![Insert into 3-node with 3-node father and reach root](http://algs4.cs.princeton.edu/33balanced/images/23tree-split.png)
 
-## 1.4 性能
+## 4. 性能
 
 2-3 树能保证 2-节点 的完美平衡，在 BST 中，操作时间复杂度和树的高度成对数关系，所以：
 
@@ -83,7 +83,7 @@ Tags: Algorithm
 
 > 在一个 $N$ 个节点的 2-3 树，搜索和插入只需要访问不超过 $logN$ 个节点。
 
-## 1.5 结论
+## 5. 结论
 
 2-3 树能保证树在插入时的**完美 2-节点 平衡**，不会出现 BST 的最坏情况。
 
