Update Application of Searching to 2017

--- a/Algorithm/搜索算法的应用.md
+++ b/Algorithm/搜索算法的应用.md
@@ -1,4 +1,4 @@
-# 13. 搜索算法的应用
+# 搜索算法的应用
 
 Tags:Algorithm
 
@@ -6,18 +6,18 @@ Tags:Algorithm
 
 <!-- MDTOC maxdepth:6 firsth1:1 numbering:0 flatten:0 bullets:0 updateOnSave:1 -->
 
-[13. 搜索算法的应用](#13-搜索算法的应用)  
-&emsp;[13.1 寻找重复元素](#131-寻找重复元素)  
-&emsp;[13.2 字典实现](#132-字典实现)  
-&emsp;[13.3 过滤器](#133-过滤器)  
-&emsp;[13.4 反向索引](#134-反向索引)  
-&emsp;[13.5 矩阵乘法](#135-矩阵乘法)  
+[搜索算法的应用](#搜索算法的应用)   
+&emsp;[1. 寻找重复元素](#1-寻找重复元素)   
+&emsp;[2. 字典实现](#2-字典实现)   
+&emsp;[3. 过滤器](#3-过滤器)   
+&emsp;[4. 反向索引](#4-反向索引)   
+&emsp;[5. 矩阵乘法](#5-矩阵乘法)   
 
 <!-- /MDTOC -->
 
 ---
 
-## 13.1 寻找重复元素
+## 1. 寻找重复元素
 
 在排序应用中也可以寻找重复元素，但是使用符号表则更为高效（特别是散列实现）。
 
@@ -27,21 +27,26 @@ Tags:Algorithm
 
 > 排序则需要 $O(NlogN)$ 的时间，在最坏情形下需要遍历一遍整个数组($O(N)$)，时间复杂度是 $O(N + NlogN)$ 比符号表稍大。
 
-## 13.2 字典实现
+## 2. 字典实现
 
 符号表的**键值对**特性最适合实现的就是一个字典类，其中包括**电话黄页**、**字典**、**账户信息** 等等
 
-## 13.3 过滤器
+## 3. 过滤器
 
 可以用符号表过滤重复元素，建立黑名单和白名单等。这主要是依赖于符号宝的高效的查找操作。
 
-## 13.4 反向索引
+## 4. 反向索引
 
 可以将键和值互换，建立反向索引，实现相互搜索。
 
-## 13.5 矩阵乘法
+## 5. 矩阵乘法
 
-矩阵乘法中的 0 是无用的，所以我们可以通过构建符号表，**存储数组索引和相应的值**。
+矩阵乘法中的 0 是无用的，所以我们可以通过构建一个 **向量类** ，使用一个符号表， 键值为向量中不为零元素的数组索引和相应的值。
+
+所以，我们就可以使用一个 **向量数组** 来代表矩阵；
+
+通过向量点乘的结果，来得到新矩阵的某个元素的值。
+
 进行点乘时，只需要查找出元素，再依照储存的索引找到相应的值相乘即可
 
 ```java
@@ -70,7 +75,7 @@ public class SparseVector {
 
     public double dot(double[] that) {
         double sum = 0.0;
-        for (int i : st.keys()) { // keys() return the Iterable<Key>
+        for (int i : st.keys()) {
             sum += that[i] * this.get(i);
         }
         return sum;
