--- a/Uncategorized/我心中的全面小康社会.md
+++ b/Uncategorized/我心中的全面小康社会.md
@@ -1,16 +1,14 @@
 ---
 title: 我心中的全面小康社会
 date: 2017-04-08
-categories: 未分类
-tags: 未分类
----
-
-标签（空格分隔）： 未分类
-
+categories: uncategorized
+tags: uncategorzied
 ---
 
 
 “小康”，一个由儒家经典著作中引申而出的词语，经过中国改革开放的总设计师——邓小平的重新演绎——“我们的目标，第一步是到2000年建立一个小康社会，这是指在温饱的基础上，生活质量进一步提高，达到丰衣足食。”，成为了中国人在新世纪的奋斗目标。而习近平总书记提出的“确保到2020年实现全面建成小康社会的奋斗”更加充实了中国人民实现全面小康社会的信念和信心。2020 年，中国即将实现全面的小康社会，下面就来谈谈我自己对“全面小康社会”的理解。
+
+<!-- more -->
 
 首先，在经济方面，居民收入进一步提高，我国的人均 GDP 达到 10000 - 12000 美元 左右，正式进入中等收入国家。经济转型成功，新经济和第三产业发展迅猛，对中国经济的贡献比例飞速增长，达到或超过三分之二。城乡居民收入翻番，居民消费能力显著增长，国内经济由投资拉动为主变为国内消费和国内需求拉动为主。沿海的劳动密集型产业逐步升级或向中西部和东南亚迁移，经济重心逐步转为依托当地或周边大学发展高新科技产业，以高新科技指导的新型制造业基本成型。
 
